<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_to_utm_node</name>
  <version>0.0.0</version>
  <description>GPS(WGS84) to UTM Coordinate Converter</description>
  <maintainer email="yourmail@etri.re.kr">YourName</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>geographiclib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>