[project]
name = "f1tenth_gym"
version = "1.0.0dev"
description = "Gym environment for F1TENTH"
authors = [
    { name = "Hongrui Zheng" },
    { name = "Renukanandan Tumu" },
    { name = "Luigi Berducci" },
    { name = "Ahmad Amine" },
    { name = "Joseph Auckley" },
    { name = "Matthew O'Kelly" },
    { name = "Aman Sinha" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Hongrui Zheng" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "gymnasium>=0.29.1,<0.30",
    "numpy>=1.18",
    "pillow>=9.1.0",
    "scipy>=1.7.3",
    "numba>=0.55.2",
    "PyYAML>=5.3.1",
    "yamldataclassconfig>=1.5.0,<2",
    "requests>=2.31.0,<3",
]

[project.urls]
Homepage = "https://f1tenth.org"
Repository = "https://github.com/f1tenth/f1tenth_gym"
Documentation = "https://f1tenth-gym.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra"
testpaths =[
    "tests",
    "integration",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "black>=23.12.1,<24",
    "ipykernel>=6.29.0,<7",
    "isort>=5.13.2,<6",
    "autoflake>=2.2.1,<3",
    "matplotlib>=3.8.2,<4",
    "flake8>=7.0.0,<8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
