<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uam_route_planner</name>
  <version>0.1.1</version>
  <description>The uam_route_planner package</description>
  <maintainer email="lee.dk@etri.re.kr">DaegyuLee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>ai3ct_common</depend>
  <depend>puxixml-dev</depend>
  <depend>route_planner_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geodetic_converter</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>