<?xml version="1.0"?>
<package format="3">
  <name>uni_node</name>
  <version>0.0.0</version>
  <description>Simple University Class Example</description>
  <maintainer email="user@test.com">user</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>